--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "reactstrap": "^8.5.1"
